[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/DeathMessage/DeathMessage.gd" type="Script" id=1]
[ext_resource path="res://src/UserInterface/CoinsCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Buttons/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Buttons/Quit.tscn" type="PackedScene" id=4]

[node name="DeathMessage" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RestartButton" type="Button" parent="."]
margin_left = 281.0
margin_top = 103.0
margin_right = 429.0
margin_bottom = 140.0
text = "Restart"

[node name="CoinsCounter" parent="." instance=ExtResource( 2 )]
margin_left = 306.0
margin_top = 28.0
margin_right = 406.0
margin_bottom = 73.0

[node name="MainMenu" parent="." instance=ExtResource( 3 )]
margin_left = 286.0
margin_top = 166.0
margin_right = 436.0
margin_bottom = 223.0

[node name="Quit" parent="." instance=ExtResource( 4 )]
margin_left = 277.0
margin_top = 249.0
margin_right = 446.0
margin_bottom = 300.0

[connection signal="button_down" from="RestartButton" to="." method="_on_RestartButton_button_down"]
