[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/DeathMessage/DeathMessage.gd" type="Script" id=1]
[ext_resource path="res://src/UserInterface/CoinsCounter.tscn" type="PackedScene" id=2]

[node name="DeathMessage" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RestartButton" type="Button" parent="."]
margin_left = 275.0
margin_top = 101.0
margin_right = 423.0
margin_bottom = 138.0
text = "Restart"

[node name="MainMenuButton" type="Button" parent="."]
anchor_right = 0.216
anchor_bottom = 0.133
margin_left = 221.0
margin_top = 185.0
margin_right = 282.2
margin_bottom = 163.16
text = "Main Menu"

[node name="QuitButton" type="Button" parent="."]
anchor_right = 0.225
anchor_bottom = 0.283
margin_left = 230.0
margin_top = 259.0
margin_right = 259.0
margin_bottom = 170.16
text = "Quit"

[node name="CoinsCounter" parent="." instance=ExtResource( 2 )]
margin_left = 306.0
margin_top = 28.0
margin_right = 406.0
margin_bottom = 73.0

[connection signal="button_down" from="RestartButton" to="." method="_on_RestartButton_button_down"]
[connection signal="button_down" from="MainMenuButton" to="." method="_on_MainMenuButton_button_down"]
[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_button_down"]
